# msentity

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  run_tests.py  run_tests.sh
docs/: api.rst  conf.py  development.rst  getting_started.rst  index.rst  usage.rst
docs/_templates/autosummary/: class.rst  function.rst
docs/api/: functions.rst  msdataset.rst  peakseries.rst  spectrum.rst  spectrumrecord.rst
docs/examples/: example.msp  usage.ipynb
docs/usage/: filtering.rst  index.rst  inspecting.rst  loading.rst  metadata.rst  records_and_peaks.rst  saving.rst
msentity/: __init__.py
msentity/cli/: commands.py  main.py
msentity/cli/commands/: __init__.py  _common.py  convert.py  head.py  info.py  merge_dir.py  meta.py
msentity/cli/shell/: __init__.py  command.py  commands.py  filters.py  history.py  registry.py  runner.py  state.py
msentity/cli/shell/commands/: attribute.py  columns.py  description.py  exit.py  export.py  filter.py  head.py  info.py  meta.py  normalize.py  peaks.py  reset.py  set_peak_id.py  set_spec_id.py  (+3 more)
msentity/core/: MSDataset.py  Peak.py  PeakSeries.py
msentity/io/: IOContext.py  ItemParser.py  constants.py  mgf.py  msp.py  prepare_ms_data.py
msentity/processing/: __init__.py  id.py  inspect.py  spectrum_similarity.py  splash.py
tests/: common.py
tests/TestCLI/: TestMain.py
tests/TestCore/: TestMSDataset.py  TestPeakSeries.py
tests/TestIO/: TestMgf.py  TestMsDataIO.py  TestMsp.py
tests/TestProcessing/: TestId.py  TestInspect.py  TestSpectrumSimilarity.py
tests/test_data/: sample.hdf5  sample.mgf  sample.msp
